--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20.8.0",
     "express": "^4.18.2",
     "mongoose": "^7.5.3",
+    "bcrypt": "^5.1.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
