--- a/app/package.json
+++ b/app/package.json
@@ -16,14 +16,17 @@
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "bootstrap": "^5.3.2",
+    "emailjs-com": "^3.2.0",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-geolocated": "^4.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.6",
     "recharts": "^2.8.0",
+    "two-step-auth": "^1.1.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
