--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.18",
     "@types/node": "^20.8.0",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^7.5.3",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
