--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^5.1.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "nodemailer": "^6.9.6"
   }
 }
