--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
   "devDependencies": {
     "@types/express": "^4.17.18",
     "@types/node": "^20.8.0",
+    "axios": "^1.5.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "mongoose": "^7.5.3",
+    "node-cron": "^3.0.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
