--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,9 @@
     "express-async-errors": "^3.1.1",
     "mongoose": "^7.5.3",
     "bcrypt": "^5.1.1",
+    "sib-api-v3-sdk": "^8.5.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "nodemailer": "^6.9.6"
+    "typescript": "^5.2.2"
   }
 }
