Revert "Squashed commit of the following:"
This reverts commit fe123ffa0e42086aa52068c0fcd81fe06942b5e8.

--- a/app/package.json
+++ b/app/package.json
@@ -29,8 +29,7 @@
     "recharts": "^2.8.0",
     "two-step-auth": "^1.1.2",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "cors": "^2.8.5"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -62,4 +61,3 @@
     "@types/recharts": "^1.8.25"
   }
 }
-
