--- a/server/package.json
+++ b/server/package.json
@@ -26,5 +26,9 @@
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
