--- a/app/package.json
+++ b/app/package.json
@@ -5,19 +5,24 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@iconify/icons-mdi": "^1.2.47",
+    "@iconify/react": "^4.1.1",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.12",
     "@mui/x-data-grid-pro": "^6.16.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/google-map-react": "^2.1.8",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.55",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
+    "google-map-react": "^2.2.1",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
@@ -29,8 +34,7 @@
     "recharts": "^2.8.0",
     "two-step-auth": "^1.1.2",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "cors": "^2.8.5"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -62,4 +66,3 @@
     "@types/recharts": "^1.8.25"
   }
 }
-
