--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.12",
     "@mui/x-data-grid-pro": "^6.16.0",
+    "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,7 +23,6 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
-    "google-map-react": "^2.2.1",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
