--- a/server/package.json
+++ b/server/package.json
@@ -16,23 +16,25 @@
     "@types/express": "^4.17.18",
     "@types/node": "^20.8.0",
     "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "mongoose": "^7.5.3",
-    "bcrypt": "^5.1.1",
-    "sib-api-v3-sdk": "^8.5.0",
     "node-cron": "^3.0.2",
     "nodemon": "^3.0.1",
     "onnxruntime-node": "^1.16.1",
     "sharp": "^0.32.6",
+    "sib-api-v3-sdk": "^8.5.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.4",
     "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "sib-api-v3-sdk": "^8.5.0"
   }
 }
