--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "mdbreact": "^5.2.0",
+    "mui-one-time-password-input": "^2.0.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
