--- a/app/package.json
+++ b/app/package.json
@@ -38,6 +38,7 @@
     "react-geolocated": "^4.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "reactjs-popup": "^2.0.6",
     "recharts": "^2.8.0",
     "two-step-auth": "^1.1.2",
@@ -71,6 +72,7 @@
   },
   "devDependencies": {
     "@types/jquery": "^3.5.20",
+    "@types/react-scroll": "^1.8.9",
     "@types/recharts": "^1.8.25"
   }
 }
