--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "emailjs-com": "^3.2.0",
     "h3-js": "^4.1.0",
     "jquery": "^3.7.1",
